force-app/main/default/objects/OD_Zipcode__c/OD_Zipcode__c.object-meta.xml
<CustomObject>
    <label>OD Zipcode</label>
    <nameField>
        <displayFormat>ODZ-{00000}</displayFormat>
        <label>OD Zipcode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OD Zipcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>