force-app/main/default/objects/OD_Zipcode__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The radius in kilometers around the coordinates specified in which to search. Ref https://github.com/1deg/resource-server-api-docs/blob/master/docs/common/query.md</description>
    <inlineHelpText>The radius in kilometers around the coordinates specified in which to search.</inlineHelpText>
    <label>Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>