force-app/main/default/objects/OD_Zipcode__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude</description>
    <inlineHelpText>Latitude</inlineHelpText>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>