force-app/main/default/objects/OD_Zipcode__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of results returned from the API.</description>
    <inlineHelpText>Number of results returned from the API.</inlineHelpText>
    <label>Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>