force-app/main/default/objects/OD_Zipcode__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Zipcode</description>
    <inlineHelpText>Zipcode</inlineHelpText>
    <label>Zipcode</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>