force-app/main/default/objects/OD_Zipcode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zipcode__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>Distance__c</columns>
    <columns>Results__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>